@@ -4,6 +4,7 @@ import com.fasterxml.jackson.databind.ObjectMapper;
 import est.oremi.backend12.bookingfresh.domain.product.ProductRepository;
 import est.oremi.backend12.bookingfresh.domain.session.dto.AiResponseData;
 import est.oremi.backend12.bookingfresh.domain.session.dto.responseSchema.RecipeSchema;
+import est.oremi.backend12.bookingfresh.domain.session.dto.responseSchema.SimplifiedRecipeSchema;
 import est.oremi.backend12.bookingfresh.domain.session.entity.Message;
 import est.oremi.backend12.bookingfresh.domain.session.entity.Session;
 import est.oremi.backend12.bookingfresh.domain.session.entity.AiRecommendation;
@@ -22,7 +23,6 @@ import java.util.*;
 @RequiredArgsConstructor
 public class AIRecommendationService {
 
-
     private final ProductRepository productRepository;
     private final AiRecommendationRepository recommendationRepository;
     private final ObjectMapper objectMapper;
@@ -30,31 +30,32 @@ public class AIRecommendationService {
     @Transactional
     public List<AiRecommendation> generateRecommendations(Session session, Message aiMsg, AiResponseData aiResponse) {
         try {
-            // ① AI 응답 JSON에서 RecipeSchema 역직렬화
+            // ① LLM이 추출한 키워드 JSON 파싱
             if (aiResponse.json() == null || aiResponse.json().isBlank())
                 return List.of();
-            RecipeSchema recipe = objectMapper.readValue(aiResponse.json(), RecipeSchema.class);
-            if (recipe.getIngredients() == null || recipe.getIngredients().isEmpty())
-                return List.of();
 
-            // ② 재료 이름 목록 추출, 정제
-            List<String> ingredientNames = recipe.getIngredients().stream()
-                    .map(RecipeSchema.Ingredient::getName)
-                    .filter(Objects::nonNull)
-                    .map(String::trim)
-                    .map(name -> name.replaceAll("[^가-힣a-zA-Z0-9]", "").toLowerCase())
-                    .filter(s -> !s.isEmpty())
-                    .toList();
-            if (ingredientNames.isEmpty()) {
-                return Collections.emptyList();
+            SimplifiedRecipeSchema schema =
+                    objectMapper.readValue(aiResponse.json(), SimplifiedRecipeSchema.class);
+
+            List<String> ingredientKeywords = schema.getIngredients();
+            if (ingredientKeywords == null || ingredientKeywords.isEmpty()) {
+                log.info("추천 불가: LLM 키워드 없음");
+                return List.of();
             }
 
-            // ③ 상품 DB 검색 (이름 기반 매칭)
-            List<Product> matchedProducts = productRepository.findByKeywords(ingredientNames)
-                    .stream().distinct().toList();
-            if (matchedProducts.isEmpty()) return List.of();
+            log.info("LLM 재료 키워드 = {}", ingredientKeywords);
 
-            // ④ 추천 엔티티 생성 및 저장
+            // ② 상품 DB 검색
+            List<Product> matchedProducts =
+                    productRepository.findByKeywords(ingredientKeywords)
+                            .stream().distinct().toList();
+
+            if (matchedProducts.isEmpty()) {
+                log.info("키워드 기반 매칭 상품 없음");
+                return List.of();
+            }
+
+            // ③ 추천 엔티티 생성 및 저장
             List<AiRecommendation> recommendations = matchedProducts.stream()
                     .map(p -> AiRecommendation.builder()
                             .session(session)
@@ -75,6 +76,8 @@ public class AIRecommendationService {
         }
     }
 
+
+    //세션 내 추천된 내역 조회
     @Transactional(readOnly = true)
     public List<AiRecommendation> getRecommendationsBySession(Session session) {
         return recommendationRepository.findBySession(session);
